instance1/temp-retrieve/objects/Doctor_Licenses__c/Doctor_Licenses__c.object-meta.xml
<CustomObject>
    <description>The Provider Licenses object is designed to store and manage detailed licensing information for doctors. It provides a centralized repository for tracking the various licenses required for a doctor to practice, prescribe medications, or perform medical services in different jurisdictions.</description>
    <label>Provider Licenses</label>
    <nameField>
        <displayFormat>PL-{00000}</displayFormat>
        <label>Provider Licenses</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Provider Licenses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>