instance1/temp-retrieve/objects/Doctor_Licenses__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <formula>AND(
				NOT(ISPICKVAL( License_Status__c, &quot;Inactive&quot;)),
OR(
    ISBLANK(Expiration_Date__c), 
    Expiration_Date__c &gt; TODAY()
)
)</formula>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>