instance1/temp-retrieve/objects/Doctor_Licenses__c/fields/Doctor__c.field-meta.xml
<CustomField>
    <fullName>Doctor__c</fullName>
    <description>Links the license to the respective doctor.</description>
    <label>Provider Account</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Must be a provider to have a provider license</errorMessage>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Affiliate Doctor Account Record Type</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Provider Licenses</relationshipLabel>
    <relationshipName>DoctorLicense</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>