instance1/temp-retrieve/objects/Doctor_Licenses__c/fields/Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Expiration_Date__c</fullName>
    <description>Tracks when the license expires.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Expiration Date</label>
    <type>Date</type>
</CustomField>