instance1/temp-retrieve/objects/Doctor_Licenses__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <description>Optional field for any additional details about the license.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Notes</label>
    <length>256</length>
    <type>LongTextArea</type>
</CustomField>