instance1/temp-retrieve/objects/Doctor_Licenses__c/validationRules/DEA_Validation_License.validationRule-meta.xml
<ValidationRule>
    <fullName>DEA_Validation_License</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISPICKVAL(License_Type__c, &quot;DEA&quot;),
    OR(
        ISBLANK(License_Number__c)
    )
)</errorConditionFormula>
    <errorDisplayField>License_Number__c</errorDisplayField>
    <errorMessage>DEA licenses must have a license number.</errorMessage>
</ValidationRule>