instance1/temp-retrieve/objects/Doctor_Licenses__c/validationRules/Expiration_Date_In_Future.validationRule-meta.xml
<ValidationRule>
    <fullName>Expiration_Date_In_Future</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
				ISNEW(),
    Expiration_Date__c &lt;= TODAY(),
				NOT(ISPICKVAL( License_Type__c, &quot;NPI&quot;))
)</errorConditionFormula>
    <errorDisplayField>Expiration_Date__c</errorDisplayField>
    <errorMessage>The expiration date must be in the future for active licenses.</errorMessage>
</ValidationRule>