instance1/temp-retrieve/objects/Doctor_Licenses__c/validationRules/Issuing_Authority_Needs_to_Be_Set.validationRule-meta.xml
<ValidationRule>
    <fullName>Issuing_Authority_Needs_to_Be_Set</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(Issuing_Authority__c)</errorConditionFormula>
    <errorDisplayField>Issuing_Authority__c</errorDisplayField>
    <errorMessage>An Issuing Provider is needed to create the Provider License</errorMessage>
</ValidationRule>