instance1/temp-retrieve/objects/Doctor_Licenses__c/validationRules/NPI_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>NPI_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISPICKVAL(License_Type__c, &quot;NPI&quot;),
    NOT(REGEX(License_Number__c, &quot;^[0-9]{10}$&quot;))
)</errorConditionFormula>
    <errorDisplayField>License_Number__c</errorDisplayField>
    <errorMessage>NPI license numbers must be exactly 10 digits.</errorMessage>
</ValidationRule>